--- a/my-first-website-project/index.html
+++ b/my-first-website-project/index.html
@@ -6,6 +6,18 @@
         <title>My test page</title>
     </head>
     <body>
-        <img src="" alt="My test image" />
+        <h1>Mozilla firefox</h1>
+        <img
+            src="./images/firefox_logo.png"
+            alt="The Firefox logo: a flaming fox surrounding the Earth."
+        />
+        <p>At Mozilla, we’re a global community of</p>
+        <ul>
+            <li>technologists</li>
+            <li>thinkers</li>
+            <li>builders</li>
+        </ul>
+        <p>working together…</p>
+        <a href="https://www.mozilla.org/en-US/about/manifesto/">Learn more</a>
     </body>
 </html>
