--- a/my-first-website-project/index.html
+++ b/my-first-website-project/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en-US">
+    <head
     <link>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
