--- a/my-first-website-project/index.html
+++ b/my-first-website-project/index.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <html lang="en-US">
-    <head
-    <link>
+    <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
         <title>My test page</title>
-        <link href="./styles/style.css" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
+        <link href="./styles/style.css" rel="stylesheet" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <h1>Mozilla firefox</h1>
@@ -23,11 +24,17 @@
             <li>thinkers</li>
             <li>builders</li>
         </ul>
-        <p>working together to keep the Internet alive and accessible, so people worldwide can be informed
-           contributors and creators of the Web. We believe this act of human collaboration across an
-           open platform is essential to individual growth and our collective future.
-
-           Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.
-
+        <p>
+            working together to keep the Internet alive and accessible, so
+            people worldwide can be informed contributors and creators of the
+            Web. We believe this act of human collaboration across an open
+            platform is essential to individual growth and our collective
+            future. Read the
+            <a href="https://www.mozilla.org/en-US/about/manifesto/"
+                >manifesto</a
+            >
+            to learn even more about the values and principles that guide the
+            pursuit of our mission.
+        </p>
     </body>
 </html>
